--- a/frontend/style/base/_variables.scss
+++ b/frontend/style/base/_variables.scss
@@ -1,7 +1,7 @@
 // Colores
 $primary-color: #0d6efd;
 $secondary-color: #3b5998;
-$background-color: #f8f9fa;
+$background-color: red;
 $text-color: #333;
 // Fuentes
 $font-primary: Arial, sans-serif;
